--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Blog</h1>
+        <h1 class="header">ReeLin's Blog</h1>
         <p class="header">myBlog</p>
 
         <ul>
