--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@ title: reelin's blog
     <div class="aside">
         <h2>I'm here</h2>
         <ol>
-            <li><a href="">reelin's Github</a></li>
-            <li><a href="">reelin's Git</a></li>
-            <li><a href="">reelin's weibo</a></li>
+            <li><a href="https://github.com/reelin">reelin's Github</a></li>
+            <li><a href="https://gist.github.com/mine">reelin's Gist</a></li>
         </ol>
     </div>
     <div class="aside">
         <h2>Good place!</h2>
         <ol>
-            <li><a href="">naiteluo's Blog</a></li>
+            <li><a href="naiteluo.net">naiteluo's Blog</a></li>
         </ol>
     </div>
 </aside>
