--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: reelin's blog
     <div class="aside">
         <h2>Good place!</h2>
         <ol>
-            <li><a href="naiteluo.net">naiteluo's Blog</a></li>
+            <li><a href="http://naiteluo.net">naiteluo's Blog</a></li>
         </ol>
     </div>
 </aside>
